rojo-test/src/snapshots/build_test__script_meta_disabled.snap
---
source: rojo-test/src/build_test.rs
expression: contents
---
<roblox version="4">
  <Item class="Folder" referent="0">
    <Properties>
      <string name="Name">script_meta_disabled</string>
    </Properties>
    <Item class="Script" referent="1">
      <Properties>
        <string name="Name">hello</string>
        <bool name="Disabled">true</bool>
        <string name="Source">-- This script should be marked 'Disabled'</string>
      </Properties>
    </Item>
  </Item>
</roblox>
