rojo-test/src/snapshots/build_test__server_init.snap
---
created: "2019-08-16T19:36:55.442461700Z"
creator: insta@0.10.0
source: rojo-test/src/build_test.rs
expression: contents
---
<roblox version="4">
  <Item class="Script" referent="0">
    <Properties>
      <string name="Name">server_init</string>
      <string name="Source">return "From folder/init.server.lua"</string>
    </Properties>
  </Item>
</roblox>
